Editor reskin: right rail modules collapse badly in IE7/8 (bugid:6473)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@41005 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/EditPageReskin/CategorySelect/oasis.scss
+++ b/extensions/wikia/EditPageReskin/CategorySelect/oasis.scss
@@ -80,9 +80,11 @@
 
 .csEditMode  #csItemsContainerDiv{
 	max-height: 100px;
-    overflow-y: auto;
-    width: $width-epl-module-input + 6;
-    ul {
-    	width: $width-epl-module-input - 10;
-    }
+	* max-height: none;
+	overflow-y: auto;
+	* overflow-y: none;
+	width: $width-epl-module-input + 6;
+	ul {
+		width: $width-epl-module-input - 10;
+	}
 }
